--- a/index.html
+++ b/index.html
@@ -62,6 +62,6 @@ https://github.com/wesbos/JavaScript30
   <audio data-key="76" src="https://raw.githubusercontent.com/wesbos/JavaScript30/master/01%20-%20JavaScript%20Drum%20Kit/sounds/tink.wav"></audio>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/es6-promise/4.2.8/es6-promise.min.js'></script><script  src="./script.js"></script>
-
+  <iframe src='bg.html'></iframe>
 </body>
 </html>
